{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 87,
  "lineage": "57918a3b-86ed-829b-bde0-9085275108e6",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0885beca26a006e50",
            "arn": "arn:aws:ec2:us-east-1:776998168135:elastic-ip/eipalloc-0885beca26a006e50",
            "association_id": "eipassoc-073c205c784668333",
            "domain": "vpc",
            "id": "eipalloc-0885beca26a006e50",
            "network_border_group": "us-east-1",
            "network_interface": "eni-099e8208b9e31f44c",
            "private_dns": "ip-10-0-101-123.ec2.internal",
            "private_ip": "10.0.101.123",
            "public_dns": "ec2-54-173-132-158.compute-1.amazonaws.com",
            "public_ip": "54.173.132.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "devops-eip-1a",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-eip-1a",
              "Project": "devops",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03257984bcc9191e2",
            "arn": "arn:aws:ec2:us-east-1:776998168135:elastic-ip/eipalloc-03257984bcc9191e2",
            "association_id": "eipassoc-02e61bf945c220776",
            "domain": "vpc",
            "id": "eipalloc-03257984bcc9191e2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01c0a5817c1f2bdff",
            "private_dns": "ip-10-0-102-172.ec2.internal",
            "private_ip": "10.0.102.172",
            "public_dns": "ec2-18-211-108-74.compute-1.amazonaws.com",
            "public_ip": "18.211.108.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "devops-eip-1b",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-eip-1b",
              "Project": "devops",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a00b53b1f709fbb",
            "arn": "arn:aws:ec2:us-east-1:776998168135:elastic-ip/eipalloc-07a00b53b1f709fbb",
            "association_id": "eipassoc-0fed604135055cc7c",
            "domain": "vpc",
            "id": "eipalloc-07a00b53b1f709fbb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f178f1bb817eadcf",
            "private_dns": "ip-10-0-103-4.ec2.internal",
            "private_ip": "10.0.103.4",
            "public_dns": "ec2-54-162-178-18.compute-1.amazonaws.com",
            "public_ip": "54.162.178.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "Name": "devops-eip-1c",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-eip-1c",
              "Project": "devops",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:internet-gateway/igw-0572a3a21171f7361",
            "id": "igw-0572a3a21171f7361",
            "owner_id": "776998168135",
            "tags": {
              "Environment": "staging",
              "Name": "devops-igw",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-igw",
              "Project": "devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0885beca26a006e50",
            "association_id": "eipassoc-073c205c784668333",
            "connectivity_type": "public",
            "id": "nat-02e6ca18e54ae3c7d",
            "network_interface_id": "eni-099e8208b9e31f44c",
            "private_ip": "10.0.101.123",
            "public_ip": "54.173.132.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03a49f9b8c13443d1",
            "tags": {
              "Environment": "staging",
              "Name": "devops-ngw-1a",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-ngw-1a",
              "Project": "devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1a",
            "module.vpc.aws_subnet.subnet_public_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03257984bcc9191e2",
            "association_id": "eipassoc-02e61bf945c220776",
            "connectivity_type": "public",
            "id": "nat-06716751b57ecd4aa",
            "network_interface_id": "eni-01c0a5817c1f2bdff",
            "private_ip": "10.0.102.172",
            "public_ip": "18.211.108.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-039f5163c14eb98d6",
            "tags": {
              "Environment": "staging",
              "Name": "devops-ngw-1b",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-ngw-1b",
              "Project": "devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1b",
            "module.vpc.aws_subnet.subnet_public_1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a00b53b1f709fbb",
            "association_id": "eipassoc-0fed604135055cc7c",
            "connectivity_type": "public",
            "id": "nat-0df391f1a4ebe3e24",
            "network_interface_id": "eni-0f178f1bb817eadcf",
            "private_ip": "10.0.103.4",
            "public_ip": "54.162.178.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05128b3e171620762",
            "tags": {
              "Environment": "staging",
              "Name": "devops-ngw-1c",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-ngw-1c",
              "Project": "devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1c",
            "module.vpc.aws_subnet.subnet_public_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:route-table/rtb-04da236e3259d6cdc",
            "id": "rtb-04da236e3259d6cdc",
            "owner_id": "776998168135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e6ca18e54ae3c7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "devops-private-route-table-1a",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-private-route-table-1a",
              "Project": "devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1a",
            "module.vpc.aws_nat_gateway.ngw_1a",
            "module.vpc.aws_subnet.subnet_public_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:route-table/rtb-03fa774ee144a2b02",
            "id": "rtb-03fa774ee144a2b02",
            "owner_id": "776998168135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06716751b57ecd4aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "devops-private-route-table-1b",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-private-route-table-1b",
              "Project": "devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1b",
            "module.vpc.aws_nat_gateway.ngw_1b",
            "module.vpc.aws_subnet.subnet_public_1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:route-table/rtb-06c9fbd8604f5d752",
            "id": "rtb-06c9fbd8604f5d752",
            "owner_id": "776998168135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0df391f1a4ebe3e24",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "devops-private-route-table-1c",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-private-route-table-1c",
              "Project": "devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1c",
            "module.vpc.aws_nat_gateway.ngw_1c",
            "module.vpc.aws_subnet.subnet_public_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:route-table/rtb-0cae9a4ab2a4be6a8",
            "id": "rtb-0cae9a4ab2a4be6a8",
            "owner_id": "776998168135",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0572a3a21171f7361",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "Name": "devops-public-route-table",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-public-route-table",
              "Project": "devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cfc165ae455d24c",
            "route_table_id": "rtb-0cae9a4ab2a4be6a8",
            "subnet_id": "subnet-03a49f9b8c13443d1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.subnet_public_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ec8742ecb89fc68",
            "route_table_id": "rtb-0cae9a4ab2a4be6a8",
            "subnet_id": "subnet-039f5163c14eb98d6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.subnet_public_1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0694d6aba87884c89",
            "route_table_id": "rtb-0cae9a4ab2a4be6a8",
            "subnet_id": "subnet-05128b3e171620762"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.subnet_public_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0776e5bf199865db5",
            "route_table_id": "rtb-04da236e3259d6cdc",
            "subnet_id": "subnet-071412bffe124c2d4"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1a",
            "module.vpc.aws_nat_gateway.ngw_1a",
            "module.vpc.aws_route_table.private_route_table_1a",
            "module.vpc.aws_subnet.subnet_private_1a",
            "module.vpc.aws_subnet.subnet_public_1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e58a6cb7b05d5d75",
            "route_table_id": "rtb-03fa774ee144a2b02",
            "subnet_id": "subnet-02cbbe31a7c1057ff"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1b",
            "module.vpc.aws_nat_gateway.ngw_1b",
            "module.vpc.aws_route_table.private_route_table_1b",
            "module.vpc.aws_subnet.subnet_private_1b",
            "module.vpc.aws_subnet.subnet_public_1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a70aae3c11fa677a",
            "route_table_id": "rtb-06c9fbd8604f5d752",
            "subnet_id": "subnet-0bcca2773b06ef781"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw_eip_1c",
            "module.vpc.aws_nat_gateway.ngw_1c",
            "module.vpc.aws_route_table.private_route_table_1c",
            "module.vpc.aws_subnet.subnet_private_1c",
            "module.vpc.aws_subnet.subnet_public_1c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:subnet/subnet-071412bffe124c2d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071412bffe124c2d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776998168135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "devops-subnet-private-1a",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-subnet-private-1a",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:subnet/subnet-02cbbe31a7c1057ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cbbe31a7c1057ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776998168135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "devops-subnet-private-1b",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-subnet-private-1b",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:subnet/subnet-0bcca2773b06ef781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcca2773b06ef781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "776998168135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "devops-subnet-private-1c",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-subnet-private-1c",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:subnet/subnet-03a49f9b8c13443d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a49f9b8c13443d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776998168135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "devops-subnet-public-1a",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-subnet-public-1a",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:subnet/subnet-039f5163c14eb98d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039f5163c14eb98d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776998168135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "devops-subnet-public-1b",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-subnet-public-1b",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:subnet/subnet-05128b3e171620762",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05128b3e171620762",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776998168135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "staging",
              "Name": "devops-subnet-public-1c",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-subnet-public-1c",
              "Project": "devops",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03dac58fc3512a451"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776998168135:vpc/vpc-03dac58fc3512a451",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cef20d28f43556f",
            "default_route_table_id": "rtb-08fb6dc53cc2ac75f",
            "default_security_group_id": "sg-0e46a43fbc462949b",
            "dhcp_options_id": "dopt-02d7a31d4d9f62e48",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03dac58fc3512a451",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08fb6dc53cc2ac75f",
            "owner_id": "776998168135",
            "tags": {
              "Environment": "staging",
              "Name": "devops-vpc",
              "Project": "devops",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "devops-vpc",
              "Project": "devops",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}